...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            tools:layout_editor_absoluteX="0dp">


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
...
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">


                <Button
                    android:id="@+id/database_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickDatabase"
                    android:scaleType="centerInside"
                    android:src="@drawable/listicon"
                    android:text="Saved Resumes"
                    app:layout_constraintEnd_toEndOf="parent"
...
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/companyData_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickCompanyInput"
                    android:text="Company Input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saved_company_info_button" />

                <ImageButton
...
                    android:textStyle="bold"
                    android:onClick="onClickNFC"
                    android:textSize="20dp"
                    android:text="Receive"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_button" />

                <ImageButton
                    android:id="@+id/nfc_button"
                    style="@style/buttonwithImage"
                    android:src="@drawable/receiveicon"
                    android:text="Receive"
...
                    app:layout_constraintTop_toBottomOf="@+id/company_button" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
...
                <Button
                    android:id="@+id/company_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickCompany"
                    android:scaleType="centerInside"
                    android:src="@drawable/searchicon"
                    android:text="Company Search" />

                <ImageButton
                    android:id="@+id/company_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickCompany"
                    android:scaleType="centerInside"
...
