...
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CompanyDataActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
...
            android:hint="Company URL (i.e. microsoft.com)"
            android:textColorHint="@color/buttonLabel"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_additionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
...
        android:textColor="@color/buttonLabel"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveButton"
        android:text="Save" />


</LinearLayout>
