...
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="1.0"
        tools:context="com.google.android.gms.maps.SupportMapFragment">

        <EditText
            android:id="@+id/CompanyDomainName"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:paddingStart="4dp"
            android:background="@color/colorPrimary"
            android:ems="10"
...
            android:hint="Enter Company url (e.g microsoft.com)"
            android:inputType="textPersonName"
            android:textColorHint="@color/buttonLabel"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".75"
            android:onClick="onClickInfo"
            android:text="Search"
            style="@style/mainmenubutton"
            android:paddingStart="12dp"
            android:textSize="15dp"
            />

    </LinearLayout>
...
